# uniform-fileio

./: .hlint.yaml  ChangeLog.md  README.md  cabal.project  package.yaml  stack.yaml  testDirResN  uniform-fileio.cabal
Uniform/: ByteString.hs  FileIO.hs  FileIOalgebra.hs  FileStatus.hs  FileStrings.hs  FileStrings.hs.orig  Filenames.hs  FilenamesAlgebra.hs  FilenamesFilePath.hs  PathShowCase.hs  Piped.hs  TypedFile.hs  notUsed_Helpers.hs  notusedText.hs  oldFilenames.hs
notyetready/: PathShowCase.hs  PathShowCase_test.hs.preprocessed?
src/: TestingFileIO.hs  UniformFileIOTest.hs  UniformTypedFileTest.hs
testDirFileIO/Uniform/: Filenames.hs  Piped.hs
tests/: Testing.hs  UniformFileIOTest.hs
tests/Uniform/: FileIO_test.hs  FileIOalgebra_test.hs  FileStrings_test.hs  Filenames_test.hs  PathShowCase_test.hs  Piped_test.hs  TypedFile_test.hs
