name: uniform-fileio
version: 0.0.11.3
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Data, Text, Uniform
synopsis: uniform file handling operations
description: reduce complexity of Haskell by providing a set of uniformly named
    operations to handle files with an uniform handling of error
    0.0.8 for use in litText
    0.0.11 fixed callIO and use callIO everywhere

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-fileio.git

library
    build-depends: base -any,
            bytestring -any,
            directory ,
            filepath -any,
            posix-paths -any,
            pureMD5 -any,
            deepseq,
--            MissingH, or cryptonite...
            text -any,
            unix -any,
            pipes ,
-- for tests
            HTF, test-invariant
--            QuickCheck,
-- mine
--            basics
--                    stringConversion  -- moved to bascis
            , uniform-strings >=0.0.9
            , uniform-error >=0.0.9
            , uniform-algebras

    exposed-modules:
--             FileIO.ByteString
--             Uniform.Filenames
             Uniform.FilenamesAlgebra
             Uniform.FileIO
             -- exposed only for test use
             Uniform.FileStrings

             Uniform.Piped
             Uniform.FileIOalgebra
--             Uniform.FileStrings
             Uniform.FileStatus
             Uniform.TypedFile
--             Uniform.FileText
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:
             Uniform.Filenames
--             Uniform.FileIOalgebra
--             Uniform.Piped
--             Uniform.FileStatus

Test-Suite fileioTestAuto
    type:       exitcode-stdio-1.0
    main-is:    UniformFileIOTest.hs
    build-depends: base, HTF
        , uniform-fileio
        , uniform-strings
        , uniform-error
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
--            TestingFileIO
--
--Test-Suite typeFiletest
--   type:       exitcode-stdio-1.0
--   build-depends:  base -any
----        , HTF
------                    bytestring -any, mtl,
------                   text -any, utf8-string -any
--      , uniform-strings
--    --   , uniform-typedFile
--      , uniform-fileio
--
----       , data-easy
------       , basics -- must not be included, gives dependency issue
--   main-is: UniformTypedFileTest.hs
--   buildable: True
--   default-language: Haskell2010
--   hs-source-dirs: src
--   other-modules:

--executable fileiotest
--    build-depends:  base -any
--        , HTF
----                    bytestring -any, mtl,
----                   text -any, utf8-string -any
--       , uniform-strings
--       , uniform-fileio
--       , uniform-error
----       , basics -- must not be included, gives dependency issue
--    main-is: Main.hs
--    buildable: True
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules: TestingFileIO
